# kmeans-omp

./: CMakeLists.txt  CMakeListsExperimental.txt  Makefile  README.md  kmeans.c  kmeans.h  kmeans_omp1_impl.c  kmeans_omp2_impl.c  kmeans_simple_impl.c  kmeans_support.c  search.make
data/: iris_petals_2.csv
knime/: iris_kmeans.knwf  jutland_kmeans.knwf
scripts/: jutland_run.sh  multirun.sh  q_info.sh  q_setup.sh  q_submit.sh  reserve_node.sh
